ran `run_tools.sh`

--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:55.708515Z",
-     "iopub.status.busy": "2023-02-13T21:39:55.708048Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.275934Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.275411Z"
+     "iopub.execute_input": "2023-02-15T23:13:33.338697Z",
+     "iopub.status.busy": "2023-02-15T23:13:33.338324Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.014759Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.014271Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.279655Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.279175Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.283995Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.283611Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.017041Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.016850Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.019988Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.019497Z"
     }
    },
    "outputs": [],
@@ -135,17 +135,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.286566Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.286195Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.414137Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.413659Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.021708Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.021552Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.119318Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.118721Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7fd9742cb040>"
+       "<__main__.SegmentPhysics at 0x7f38237d1960>"
       ]
      },
      "execution_count": 3,
@@ -182,17 +182,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.439202Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.439014Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.444385Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.444010Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.141755Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.141463Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.146111Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.145830Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7fd974288e50>"
+       "<__main__.SegmentTask at 0x7f37d9e7bd60>"
       ]
      },
      "execution_count": 4,
@@ -248,10 +248,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.445949Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.445829Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.553327Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.552952Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.147804Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.147666Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.244855Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.244386Z"
     }
    },
    "outputs": [],
@@ -264,10 +264,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.555280Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.555100Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.558639Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.558346Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.246872Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.246701Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.250675Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.250261Z"
     }
    },
    "outputs": [
@@ -292,10 +292,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.560212Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.560060Z",
-     "iopub.status.idle": "2023-02-13T21:39:56.563109Z",
-     "shell.execute_reply": "2023-02-13T21:39:56.562796Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.252259Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.252141Z",
+     "iopub.status.idle": "2023-02-15T23:13:34.255068Z",
+     "shell.execute_reply": "2023-02-15T23:13:34.254754Z"
     }
    },
    "outputs": [
@@ -328,10 +328,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:39:56.564705Z",
-     "iopub.status.busy": "2023-02-13T21:39:56.564424Z",
-     "iopub.status.idle": "2023-02-13T21:40:03.224057Z",
-     "shell.execute_reply": "2023-02-13T21:40:03.223449Z"
+     "iopub.execute_input": "2023-02-15T23:13:34.256559Z",
+     "iopub.status.busy": "2023-02-15T23:13:34.256441Z",
+     "iopub.status.idle": "2023-02-15T23:13:35.800252Z",
+     "shell.execute_reply": "2023-02-15T23:13:35.799770Z"
     }
    },
    "outputs": [
@@ -339,15 +339,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "2023-02-16 00:13:34.556126: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home/simon/miniforge3/envs/chain_control_git_acme/lib/python3.10/site-packages/reverb/platform/default/ensure_tf_install.py:53: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if (distutils.version.LooseVersion(version) <\n",
+      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     }
    ],
@@ -386,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
