--- a/docs/5_save_loading_model_controller.ipynb
+++ b/docs/5_save_loading_model_controller.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:06.213796Z",
-     "iopub.status.busy": "2023-02-13T21:44:06.213339Z",
-     "iopub.status.idle": "2023-02-13T21:44:07.193626Z",
-     "shell.execute_reply": "2023-02-13T21:44:07.193161Z"
+     "iopub.execute_input": "2023-02-15T23:17:33.185122Z",
+     "iopub.status.busy": "2023-02-15T23:17:33.184939Z",
+     "iopub.status.idle": "2023-02-15T23:17:36.620552Z",
+     "shell.execute_reply": "2023-02-15T23:17:36.619929Z"
     }
    },
    "outputs": [
@@ -25,15 +25,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "2023-02-16 00:17:35.028521: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home/simon/miniforge3/envs/chain_control_git_acme/lib/python3.10/site-packages/reverb/platform/default/ensure_tf_install.py:53: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if (distutils.version.LooseVersion(version) <\n",
+      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     }
    ],
@@ -51,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:07.195664Z",
-     "iopub.status.busy": "2023-02-13T21:44:07.195429Z",
-     "iopub.status.idle": "2023-02-13T21:44:07.301114Z",
-     "shell.execute_reply": "2023-02-13T21:44:07.300761Z"
+     "iopub.execute_input": "2023-02-15T23:17:36.623039Z",
+     "iopub.status.busy": "2023-02-15T23:17:36.622637Z",
+     "iopub.status.idle": "2023-02-15T23:17:36.772684Z",
+     "shell.execute_reply": "2023-02-15T23:17:36.772148Z"
     }
    },
    "outputs": [],
@@ -75,10 +76,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:07.303382Z",
-     "iopub.status.busy": "2023-02-13T21:44:07.303190Z",
-     "iopub.status.idle": "2023-02-13T21:44:07.950052Z",
-     "shell.execute_reply": "2023-02-13T21:44:07.949570Z"
+     "iopub.execute_input": "2023-02-15T23:17:36.774726Z",
+     "iopub.status.busy": "2023-02-15T23:17:36.774571Z",
+     "iopub.status.idle": "2023-02-15T23:17:37.450041Z",
+     "shell.execute_reply": "2023-02-15T23:17:37.449558Z"
     }
    },
    "outputs": [],
@@ -101,10 +102,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:07.952561Z",
-     "iopub.status.busy": "2023-02-13T21:44:07.952270Z",
-     "iopub.status.idle": "2023-02-13T21:44:08.039712Z",
-     "shell.execute_reply": "2023-02-13T21:44:08.039277Z"
+     "iopub.execute_input": "2023-02-15T23:17:37.452106Z",
+     "iopub.status.busy": "2023-02-15T23:17:37.451957Z",
+     "iopub.status.idle": "2023-02-15T23:17:37.543130Z",
+     "shell.execute_reply": "2023-02-15T23:17:37.542567Z"
     }
    },
    "outputs": [
@@ -115,8 +116,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontroller\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:16\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 16\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     17\u001b[0m             \u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     19\u001b[0m         )\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontroller\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:15\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 15\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     16\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m         )\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
       "\u001b[0;31mException\u001b[0m: Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\n            To de-serialise use `eqx.tree_deserialise_leaves`."
      ]
     }
@@ -137,10 +138,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:08.041698Z",
-     "iopub.status.busy": "2023-02-13T21:44:08.041545Z",
-     "iopub.status.idle": "2023-02-13T21:44:08.045351Z",
-     "shell.execute_reply": "2023-02-13T21:44:08.045011Z"
+     "iopub.execute_input": "2023-02-15T23:17:37.544945Z",
+     "iopub.status.busy": "2023-02-15T23:17:37.544779Z",
+     "iopub.status.idle": "2023-02-15T23:17:37.548908Z",
+     "shell.execute_reply": "2023-02-15T23:17:37.548544Z"
     }
    },
    "outputs": [],
@@ -160,10 +161,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:08.046996Z",
-     "iopub.status.busy": "2023-02-13T21:44:08.046848Z",
-     "iopub.status.idle": "2023-02-13T21:44:08.051991Z",
-     "shell.execute_reply": "2023-02-13T21:44:08.051692Z"
+     "iopub.execute_input": "2023-02-15T23:17:37.550565Z",
+     "iopub.status.busy": "2023-02-15T23:17:37.550392Z",
+     "iopub.status.idle": "2023-02-15T23:17:37.555331Z",
+     "shell.execute_reply": "2023-02-15T23:17:37.554981Z"
     }
    },
    "outputs": [
@@ -194,10 +195,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-13T21:44:08.053572Z",
-     "iopub.status.busy": "2023-02-13T21:44:08.053423Z",
-     "iopub.status.idle": "2023-02-13T21:44:08.063572Z",
-     "shell.execute_reply": "2023-02-13T21:44:08.063284Z"
+     "iopub.execute_input": "2023-02-15T23:17:37.557163Z",
+     "iopub.status.busy": "2023-02-15T23:17:37.556944Z",
+     "iopub.status.idle": "2023-02-15T23:17:37.568623Z",
+     "shell.execute_reply": "2023-02-15T23:17:37.568277Z"
     }
    },
    "outputs": [
@@ -208,7 +209,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:9\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(path):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 9\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
       "\u001b[0;31mUnpicklingError\u001b[0m: STACK_GLOBAL requires str"
      ]
@@ -228,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('chain_control')",
+   "display_name": "chain_control_git_acme",
    "language": "python",
    "name": "python3"
   },
@@ -242,11 +243,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8d9c863fb986fa342e8b7e2ad667cb8566ab6ae40647af51ec8caf787fd66a57"
+    "hash": "5b2253a7523a95ed3902114f0f706ff75350c1390ed2b5722c967a5fcb81421d"
    }
   }
  },
