--- a/docs/4_training_a_model_and_controller.ipynb
+++ b/docs/4_training_a_model_and_controller.ipynb
@@ -133,10 +133,10 @@
    "source": [
     "from cc.train import TrainingOptionsController\n",
     "from cc.examples.neural_ode_controller_compact_example import make_neural_ode_controller\n",
-    "from cc.env.collect.collect import collect_random_step_source\n",
+    "from cc.env.collect import random_steps_source\n",
     "from cc.env.wrappers import AddRefSignalRewardFnWrapper\n",
     "\n",
-    "source = collect_random_step_source(env, seeds=list(range(30)))\n",
+    "source = random_steps_source(env, seeds=list(range(30)))\n",
     "env_w_source = AddRefSignalRewardFnWrapper(env, source)"
    ]
   },
@@ -292,7 +292,7 @@
    "source": [
     "from cc.env.collect import collect_exhaust_source\n",
     "\n",
-    "eval_source = collect_random_step_source(env, seeds=list(range(6)))\n",
+    "eval_source = random_steps_source(env, seeds=list(range(6)))\n",
     "# returns a tuple\n",
     "controller_performance_sample, loop_results = collect_exhaust_source(\n",
     "    AddRefSignalRewardFnWrapper(env, eval_source), fitted_controller)"
