--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:33.338697Z",
-     "iopub.status.busy": "2023-02-15T23:13:33.338324Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.014759Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.014271Z"
+     "iopub.execute_input": "2023-03-10T09:10:00.374219Z",
+     "iopub.status.busy": "2023-03-10T09:10:00.374055Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.057365Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.056851Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.017041Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.016850Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.019988Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.019497Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.059665Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.059429Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.062590Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.062132Z"
     }
    },
    "outputs": [],
@@ -135,17 +135,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.021708Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.021552Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.119318Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.118721Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.064511Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.064273Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.189692Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.189187Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f38237d1960>"
+       "<__main__.SegmentPhysics at 0x7f21b4351520>"
       ]
      },
      "execution_count": 3,
@@ -182,17 +182,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.141755Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.141463Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.146111Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.145830Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.217167Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.216969Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.222565Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.222220Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f37d9e7bd60>"
+       "<__main__.SegmentTask at 0x7f21704dd040>"
       ]
      },
      "execution_count": 4,
@@ -248,10 +248,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.147804Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.147666Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.244855Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.244386Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.224263Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.224087Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.343618Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.343198Z"
     }
    },
    "outputs": [],
@@ -264,10 +264,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.246872Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.246701Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.250675Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.250261Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.345782Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.345581Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.349837Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.349516Z"
     }
    },
    "outputs": [
@@ -292,10 +292,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.252259Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.252141Z",
-     "iopub.status.idle": "2023-02-15T23:13:34.255068Z",
-     "shell.execute_reply": "2023-02-15T23:13:34.254754Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.351434Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.351281Z",
+     "iopub.status.idle": "2023-03-10T09:10:01.354948Z",
+     "shell.execute_reply": "2023-03-10T09:10:01.354593Z"
     }
    },
    "outputs": [
@@ -328,10 +328,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:13:34.256559Z",
-     "iopub.status.busy": "2023-02-15T23:13:34.256441Z",
-     "iopub.status.idle": "2023-02-15T23:13:35.800252Z",
-     "shell.execute_reply": "2023-02-15T23:13:35.799770Z"
+     "iopub.execute_input": "2023-03-10T09:10:01.356620Z",
+     "iopub.status.busy": "2023-03-10T09:10:01.356403Z",
+     "iopub.status.idle": "2023-03-10T09:10:02.130133Z",
+     "shell.execute_reply": "2023-03-10T09:10:02.129483Z"
     }
    },
    "outputs": [
@@ -339,16 +339,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-16 00:13:34.556126: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n"
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
+      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control_git_acme/lib/python3.10/site-packages/reverb/platform/default/ensure_tf_install.py:53: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
-      "  if (distutils.version.LooseVersion(version) <\n",
-      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "/home/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
      ]
     }
    ],
@@ -387,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
