--- a/docs/5_save_loading_model_controller.ipynb
+++ b/docs/5_save_loading_model_controller.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:33.185122Z",
-     "iopub.status.busy": "2023-02-15T23:17:33.184939Z",
-     "iopub.status.idle": "2023-02-15T23:17:36.620552Z",
-     "shell.execute_reply": "2023-02-15T23:17:36.619929Z"
+     "iopub.execute_input": "2023-03-10T09:15:55.761857Z",
+     "iopub.status.busy": "2023-03-10T09:15:55.761700Z",
+     "iopub.status.idle": "2023-03-10T09:15:57.038180Z",
+     "shell.execute_reply": "2023-03-10T09:15:57.037629Z"
     }
    },
    "outputs": [
@@ -25,16 +25,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-16 00:17:35.028521: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n"
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
+      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control_git_acme/lib/python3.10/site-packages/reverb/platform/default/ensure_tf_install.py:53: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
-      "  if (distutils.version.LooseVersion(version) <\n",
-      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "/home/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
      ]
     }
    ],
@@ -52,10 +55,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:36.623039Z",
-     "iopub.status.busy": "2023-02-15T23:17:36.622637Z",
-     "iopub.status.idle": "2023-02-15T23:17:36.772684Z",
-     "shell.execute_reply": "2023-02-15T23:17:36.772148Z"
+     "iopub.execute_input": "2023-03-10T09:15:57.041180Z",
+     "iopub.status.busy": "2023-03-10T09:15:57.040569Z",
+     "iopub.status.idle": "2023-03-10T09:15:57.188145Z",
+     "shell.execute_reply": "2023-03-10T09:15:57.187662Z"
     }
    },
    "outputs": [],
@@ -76,10 +79,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:36.774726Z",
-     "iopub.status.busy": "2023-02-15T23:17:36.774571Z",
-     "iopub.status.idle": "2023-02-15T23:17:37.450041Z",
-     "shell.execute_reply": "2023-02-15T23:17:37.449558Z"
+     "iopub.execute_input": "2023-03-10T09:15:57.190332Z",
+     "iopub.status.busy": "2023-03-10T09:15:57.190163Z",
+     "iopub.status.idle": "2023-03-10T09:15:58.021098Z",
+     "shell.execute_reply": "2023-03-10T09:15:58.020589Z"
     }
    },
    "outputs": [],
@@ -102,10 +105,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:37.452106Z",
-     "iopub.status.busy": "2023-02-15T23:17:37.451957Z",
-     "iopub.status.idle": "2023-02-15T23:17:37.543130Z",
-     "shell.execute_reply": "2023-02-15T23:17:37.542567Z"
+     "iopub.execute_input": "2023-03-10T09:15:58.023634Z",
+     "iopub.status.busy": "2023-03-10T09:15:58.023431Z",
+     "iopub.status.idle": "2023-03-10T09:15:58.209963Z",
+     "shell.execute_reply": "2023-03-10T09:15:58.209473Z"
     }
    },
    "outputs": [
@@ -117,7 +120,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontroller\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:15\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 15\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     16\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m         )\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:40\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 40\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     41\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     43\u001b[0m         )\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     46\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
       "\u001b[0;31mException\u001b[0m: Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\n            To de-serialise use `eqx.tree_deserialise_leaves`."
      ]
     }
@@ -138,10 +141,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:37.544945Z",
-     "iopub.status.busy": "2023-02-15T23:17:37.544779Z",
-     "iopub.status.idle": "2023-02-15T23:17:37.548908Z",
-     "shell.execute_reply": "2023-02-15T23:17:37.548544Z"
+     "iopub.execute_input": "2023-03-10T09:15:58.211909Z",
+     "iopub.status.busy": "2023-03-10T09:15:58.211742Z",
+     "iopub.status.idle": "2023-03-10T09:15:58.216700Z",
+     "shell.execute_reply": "2023-03-10T09:15:58.216181Z"
     }
    },
    "outputs": [],
@@ -161,10 +164,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:37.550565Z",
-     "iopub.status.busy": "2023-02-15T23:17:37.550392Z",
-     "iopub.status.idle": "2023-02-15T23:17:37.555331Z",
-     "shell.execute_reply": "2023-02-15T23:17:37.554981Z"
+     "iopub.execute_input": "2023-03-10T09:15:58.218699Z",
+     "iopub.status.busy": "2023-03-10T09:15:58.218497Z",
+     "iopub.status.idle": "2023-03-10T09:15:58.223250Z",
+     "shell.execute_reply": "2023-03-10T09:15:58.222896Z"
     }
    },
    "outputs": [
@@ -195,10 +198,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-15T23:17:37.557163Z",
-     "iopub.status.busy": "2023-02-15T23:17:37.556944Z",
-     "iopub.status.idle": "2023-02-15T23:17:37.568623Z",
-     "shell.execute_reply": "2023-02-15T23:17:37.568277Z"
+     "iopub.execute_input": "2023-03-10T09:15:58.225072Z",
+     "iopub.status.busy": "2023-03-10T09:15:58.224921Z",
+     "iopub.status.idle": "2023-03-10T09:15:58.240036Z",
+     "shell.execute_reply": "2023-03-10T09:15:58.239564Z"
     }
    },
    "outputs": [
@@ -210,7 +213,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:9\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(path):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 9\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:34\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(path):\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m---> 34\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
       "\u001b[0;31mUnpicklingError\u001b[0m: STACK_GLOBAL requires str"
      ]
     }
@@ -243,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
